RESOLVED FIXED186764
[Threaded paintingEngine] Fix rendering glitches
https://bugs.webkit.org/show_bug.cgi?id=186764
Summary [Threaded paintingEngine] Fix rendering glitches
Karl Leplat
Reported 2018-06-18 07:32:20 PDT
By enabling NicosiaPaintingEngineThreaded instead of NicosiaPaintingEngineBasic which is the default implementation, we have seen that some frames are incomplete causing glitches on the screen. In fact, we are trying to upload buffers that have not finished processing. To avoid this problem, we must use the Nicosia::Buffer function waitUntilPaintingComplete() before each uploading.
Attachments
Patch (3.57 KB, patch)
2018-06-18 07:40 PDT, Karl Leplat
no flags
Karl Leplat
Comment 1 2018-06-18 07:40:35 PDT
WebKit Commit Bot
Comment 2 2018-06-18 08:40:40 PDT
Comment on attachment 342935 [details] Patch Clearing flags on attachment: 342935 Committed r232931: <https://trac.webkit.org/changeset/232931>
WebKit Commit Bot
Comment 3 2018-06-18 08:40:41 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.