[Threaded paintingEngine] Fix rendering glitches https://bugs.webkit.org/show_bug.cgi?id=186764

Patch by Karl Leplat <karl.leplat_ext@softathome.com> on 2018-06-18
Reviewed by Žan Doberšek.

Source/WebCore:

* platform/graphics/nicosia/NicosiaPaintingEngineBasic.cpp:
(Nicosia::PaintingEngineBasic::paint):
To keep backwards compatibility with no multi-threaded,
we call Nicosia::Buffer functions beginPainting() and completePainting().

Source/WebKit:

* Shared/CoordinatedGraphics/CoordinatedBackingStore.cpp:
(WebKit::CoordinatedBackingStoreTile::swapBuffers):
We call Nicosia::Buffer function waitUntilPaintingComplete()
in order to synchronize of using Nicosia:buffer between MainThread
and ThreadedCompositor.

Canonical link: https://commits.webkit.org/202034@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232931 268f45cc-cd09-0410-ab3c-d52691b4dbfc